# MLOps

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Makefile.mk  README.md  dataset_schema.json  dvc.yaml  experiments.yaml  pyproject.toml  pytest.ini  requirements.txt  run_experiments.py  run_promote_model.py
.dvc/: config
app/: .env.example  main.py
app/core/: config.py
app/schemas/: predict.py
app/services/: predictor.py
data/clean/: .gitignore
data/features/: .gitignore
data/raw/: .gitignore  seoul_bike_sharing_original.csv.dvc
docker/: Dockerfile
docs/: mkdocs.yml
docs/docs/: index.md
mlops/: __init__.py  config.py  dataset.py  features.py  plots.py
mlops/modeling/: predict.py  train.py
models/: best_model.pkl
notebooks/: 01_EDA Final.ipynb  01_EDA_and_Preprocessing.ipynb  02_Feature_Engineering FINAL.ipynb  02_Modeling_and_Training.ipynb  03_Evaluation_and_Results.ipynb  03_Model_Training_Evaluation FINAL.ipynb  Seoul_Bike_EDA_ML.ipynb
notebooks/HTMLS/: Seoul_Bike_EDA_ML_v1.html  Seoul_Bike_EDA_ML_v2.html
reports/figures/: .gitignore
src/api/: app.py
src/mlops_pruebas/: __init__.py
src/mlops_pruebas/data/: clean_data.py  load_data.py
src/mlops_pruebas/features/: build_features.py
src/mlops_pruebas/models/: train.py
src/test/: test_model.py
test/: test_data.py
tests/: test_config.py  test_data.py  test_features.py  test_integration_pipeline.py  test_modeling.py  test_plots.py
tests/integracion/: test_integration_pipeline.py
